fix overflow in contattiContainer

--- a/src/styles/components/contatti-container.scss
+++ b/src/styles/components/contatti-container.scss
@@ -4,6 +4,7 @@
     background-color: #f0eae3;
     .container {
         height: 100%;
+        overflow-y: auto;
         .row {
             height: 100%;
             .info-container {
